# cpp-utils

./: CMakeLists.txt  README.md
include/cpp_utils/: cpp_utils.h
src/: CMakeLists.txt
src/tests/: test_cpp_utils.cpp
